# restaurant

./: .build.yml  .envrc  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-master.yml  python-package.yml
restaurant/: app.py  config.py  const.py  main.py  schema.py
restaurant/blueprints/: index.py  ingredients.py
restaurant/models/: schema.py
restaurant/static/css/: style.css
restaurant/templates/: base.html  index.html  index.jinja2
restaurant/templates/ingredients/: index.html  new.html
utils/recipegen/: ingredients.csv  recipegen.py  templates.csv
