[tool.poetry]
name = "restaurant"
version = "0.1.0"
description = ""
authors = ["jedi5218 <jedi5218@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
sqlalchemy = "^1.3.19"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
