[tool.poetry]
name = "restaurant"
version = "0.1.0"
description = ""
authors = ["jedi5218 <jedi5218@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
sqlalchemy = "^1.3.19"
flask = "^1.1.2"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.6"
Bootstrap-Flask = "^1.5.1"
wtforms = "^2.3.3"
flask-wtf = "^0.14.3"
flask_sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
